# shared_state

./: README.md  pyproject.toml
src/shared_state/: copilotkit_predict_state.py  copilotkit_streaming.py  main.py
