[project]
name = "shared_state"
version = "0.1.0"
description = "shared_state using crewAI"
authors = [{ name = "Suhas Deshpande", email = "suhas@copilotkit.ai" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.118.0,<1.0.0",
    "copilotkit==0.1.47a3",
]

[project.scripts]
kickoff = "shared_state.main:kickoff"
run_crew = "shared_state.main:kickoff"
plot = "shared_state.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
